--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,6 +1,7 @@
 html,
 body {
     height: 100%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .wrap {
@@ -16,78 +17,19 @@ body {
 
 .footer {
     height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
+    background-color: #222;
+    border-top: 1px solid #080808;
     padding-top: 20px;
+    color: #9d9d9d;
 }
 
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
+/* Nav */
+.navbar-brand {
+    height: auto;
 }
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
+ul.navbar-nav li {
+    height: 80px;
+    line-height: 80px;
 }
 
 /* align the logout "link" (button in form) of the navbar */
@@ -102,6 +44,9 @@ a.desc:after {
         text-align: left;
         width: 100%;
         padding: 10px 15px;
+    }
+    .navbar-toggle {
+        margin-top: 23px;
     }
 }
 
