--- a/web/css/site.css
+++ b/web/css/site.css
@@ -86,3 +86,7 @@ ul.navbar-nav li {
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
+
+.btn-add {
+    margin-bottom: 10px;
+}
